--- a/Temaoppgave 2/css/styles.css
+++ b/Temaoppgave 2/css/styles.css
@@ -461,7 +461,7 @@ video {
     width: 100%;
 }
 
-@media screen and (min-width 768px) {
+@media screen and (min-width: 768px) {
     .single-img img {
         margin: 0;
     }
