--- a/css/styles.css
+++ b/css/styles.css
@@ -4,54 +4,78 @@
     box-sizing: border-box;
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+@font-face {
+    font-family: Raleway, Arial, Helvetica, sans-serif;
+    src: url("/assets/Fonts/Raleway-Regular.ttf");
+    font-weight: 500;
+}
 
 @font-face {
-    font-family: "Raleway";
-    src: url("../assets/Fonts/Raleway-Medium.ttf");
-    font-weight: 500;
+    font-family: Roborto, Arial, Helvetica, sans-serif;
+    src: url("/assets/Fonts/Raleway-Regular.ttf");
+    font-weight: 400;
 }
 
 body {
     background-color: #F9F4EC;
+} 
+
+.layout {
+    width: 100%;
+    max-width: 1000px;
+    margin: 0 auto;
 }
 
- h1 {
-     font-family: Raleway, Arial, Helvetica, sans-serif;
-     font-weight: 500;
- }
+.layout2 {
+    width: 100%;
+    max-width: 900px;
+    margin: 0 auto;
+}
 
- h2 {
+h1 {
     font-family: Raleway, Arial, Helvetica, sans-serif;
-    font-weight: 400;
- }
-
- h3 {
-    font-family: Raleway, Arial, Helvetica, sans-serif;
-    font-weight: 300;
- }
-
- .title {
+    font-weight: 500;
     text-align: center;
-    padding: 80px;
-    font-size: 48px;
+    padding: 50px;
+    font-size: 54.93px;
 }
 
-.title2 {
-   text-align: center;
-   font-size: 31.25px;
+h2 {
+    font-family: Raleway, Arial, Helvetica, sans-serif;
+    font-weight: 500;
+    text-align: center;
+    font-size: 43.95px;
 }
 
-.title3 {
+h3 {
+   font-family: Roborto, Arial, Helvetica, sans-serif;
+   font-weight: 500;
    text-align: center;
-   margin: 20px;
+   padding: 20px;
    font-size: 20px;
 }
 
-.card-2 .title3 {
-    text-align: center;
-    margin: 20px 0;
+ h4 {
+    font-family: Raleway, Arial, Helvetica, sans-serif;
+    font-weight: 500;
     font-size: 20px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+h5 {
+    font-family: Raleway, Arial, Helvetica, sans-serif;
+    font-weight: 500;
+    text-align: left;
+    font-size: 35.16px;
+    padding-bottom: 20px;
+}
+
+h6 {
+    font-family: Raleway, Arial, Helvetica, sans-serif;
+    font-weight: 500;
+    text-align: left;
+    font-size: 35.16px;
 }
 
 a {
@@ -68,16 +92,18 @@ a h4 {
 }
 
 a:hover h4 {
-   color: #7FA493;
+   color: #000;
+   border-bottom: 2px solid #000;
+
 }
 
-a .h4-2 {
+a h6 {
     color: #000;
 }
 
-a:hover .h4-2 {
-   color: #fff;
-   text-decoration: underline;
+a:hover h6 {
+    color: #000;
+    border-bottom: 2px solid #000;
 }
 
 
@@ -96,7 +122,7 @@ video {
 }
 
 
- .wrapper {
+.wrapper {
     width: 100%;
 }
 
@@ -108,7 +134,7 @@ video {
     flex-flow: row wrap-reverse;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 840px) {
     .header-box {
         flex-flow: row nowrap;
         min-width: 1000px;
@@ -117,17 +143,15 @@ video {
     }
 }
 
-
  .blog-name {
     padding: 90px;
     font-size: 40px;
     flex-grow: 1;
     font-family: Raleway, Arial, Helvetica, sans-serif;
     font-weight: 500;
-    
  }
 
- @media screen and (min-width: 768px) {
+ @media screen and (min-width: 840px) {
      .blog-name{
         padding: 90px 0 0 0;
      } 
@@ -142,7 +166,6 @@ video {
      font-family: Roboto, Arial, Helvetica, sans-serif;
      font-size: 20px;
      top: 50px;
-
  }
 
  .menu-item a {
@@ -154,31 +177,22 @@ video {
     border-bottom: 2px solid #666;
 }
 
-
- @media screen and (min-width: 768px) {
+ @media screen and (min-width: 840px) {
     .menu {
         justify-content: space-between; 
     }
  }
 
 
-
- .layout {
-     width: 100%;
-     max-width: 1000px;
-     margin: 0 auto;
- }
-
  .card {
      display: flex;
      flex-flow: row wrap;
      width: 100%;
      background-color: #fff;
+     margin: 4rem auto;
  }
 
-
-
- @media screen and (min-width: 768px) {
+ @media screen and (min-width: 840px) {
     .card {
         flex-flow: row nowrap;
         margin: 20px 0;
@@ -199,7 +213,7 @@ video {
     
  }
 
- @media screen and (min-width: 768px) {
+ @media screen and (min-width: 840px) {
     .card .card-img img {
         width: 500px;
      }
@@ -208,12 +222,13 @@ video {
 .card .card-text {
     flex-grow: 2;
     padding: 40px;
-    font-family: Roboto, Arial, Helvetica, sans-serif;
-    font-size: 16px;
-    line-height: 1.5;
+    font-family: Roborto, Arial, Helvetica, sans-serif;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 27px;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 840px) {
     .card .card-text {
     padding:0;
     margin-top: 60px;
@@ -222,13 +237,13 @@ video {
     }
 }
 
-.card .card-text h2 {
-    margin-bottom: 20px;
+.card-text-small {
+    display: flex;
 }
 
 .card-2 {
     width: 100%;
-    height: 500px;
+    height: 550px;
     background-color: #7FA493;
     margin-top: 100px;
     display: flex;
@@ -237,23 +252,21 @@ video {
     justify-content: center;
 }
 
-.card-2 .card-text-2 {
-    flex-grow: 1;
-    padding: 30px;
-    margin: 20px;
-    font-family: Roboto, Arial, Helvetica, sans-serif;
-    font-size: 16px;
+.card-2-text {
+    padding: 50px;
 }
 
 .card-img-2 img {
     width: 100%;
     display: flex;
     flex-flow: row wrap;
+    height: 200px;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 840px) {
     .card-img-2 img {
         width: 100%;
+        height: auto;
     }
     .card-img-2 {
         margin: 0 auto;
@@ -265,27 +278,18 @@ video {
     width: 100%;
     display: flex;
     flex-flow: row wrap;
-    border: 1px solid black;
+    background-color: #7FA493;
     padding: 30px;
 }
 
 .Social-Media {
     display: flex;
-    flex-flow: row wrap;
-    width: 150px;
-    height: 100px;
-    margin-left: 20px;
-    margin-bottom: 20px;
+    flex-direction: column;    
+    width: 250px;
     font-family: Roboto, Arial, Helvetica, sans-serif;
-    font-size: 16px;
 }
 
-.icon1 {
-    width: 15px;
-    height: 15px;
-}
-
-.icon2 {
+.icon {
     width: 15px;
     height: 15px;
 }
@@ -293,144 +297,101 @@ video {
 
 .Contact {
     display: flex;
-    flex-flow: row wrap;
-    width: 180px;
-    height: 100px;
-    margin-left: 20px;
+    flex-direction: column;
+    width: 250px;
     font-family: Roboto, Arial, Helvetica, sans-serif;
-    font-size: 16px;
 }
 
-/* side 2*/
-
-.header2 img {
-    width: 100%;
-    height: auto;
+.footer-box {
+    display: flex;
+    flex-direction: column;
 }
-
-@media screen and (min-width: 768px) {
-    .header2 img {
-        height: 500px;
+@media screen and (min-width: 840px) {
+    .footer-box {
+        flex-direction: row;
     }
 }
 
-.back-icon {
-    width: 30px;
-    height: 30px;
-    margin: 30px;
+
+/* side 2 */ 
+
+.hero img {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    width: 100%;
+    height: auto;
+}
+ 
+@media screen and (min-width: 768px) {
+    .hero img {
+        height: 600px;
+     }
 }
 
 .card-3 {
     display: flex;
-    flex-flow: row wrap;
-    margin: 30px;
+    margin-top: 50px;
+    justify-content: center;
 }
 
-@media screen and (min-width: 768px) {
-    .card-3 {
-        flex-flow: row nowrap;
-        margin: 20px 0px 0px 0px;
-        height: 400px;
+.text-box {
+    font-family: Roborto, Arial, Helvetica, sans-serif;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 27px;
+    width: 90%;
+}
+
+@media  screen and (min-width: 768px) {
+    .text-box {
+        width: 500px;
     }
 }
 
-.layout .card-3 .card-img-3 img {
+.picture {
+    margin-top: 50px;
+    display: flex;
+    flex-wrap: wrap;
+    padding: 20px;
+}
+
+@media screen and (min-width: 768px) {
+    .picture-box {
+        padding: 0px;
+    }
+}
+
+.picture img {
     width: 100%;
 }
-
-@media screen and (min-width: 768px) {
-    .layout .card-3 .card-img-3 img {
-        width: 350px;
-        height: 400px;
-        padding: 30px;
-        margin: 0;
-     }
- }
-
-.card-text-3 {
-    margin-top: 30px;
-    font-family: Roboto, Arial, Helvetica, sans-serif;
-    font-size: 16px;
-    line-height: 1.4;
-    
-}
-@media screen and (min-width: 768px) {
-    .card-3 .card-text-3 {
-    font-size: 20px;
-    font-family: Roboto, Arial, Helvetica, sans-serif;
-    }
-}
-
-.card-4 {
-    display: block;
-    flex-flow: row wrap;
-    margin: 30px;
-    font-family: Roboto, Arial, Helvetica, sans-serif;
-    font-size: 16px;
-    line-height: 1.4;
-}
-
-@media screen and (min-width: 768px) {
-    .card-4 {
-        margin: 0;
-        margin-left: 30px;
-        font-size: 20px;
-        font-family: Roboto, Arial, Helvetica, sans-serif;
-    }
-}
-
-.card-5 {
+ 
+.picture-box {
+    margin-top: 50px;
     display: flex;
     flex-flow: row wrap;
-    margin: 30px;
+    justify-content: space-between;
+    padding: 20px;
 }
 
-@media screen and (min-width: 768px) {
-
-    .card-5 {
-        flex-flow: row nowrap;
-        height: 400px;
-        margin: 0;
-        margin-left: 30px;
-    }
-}
-
-.layout .card-5 .card-img-5 img {
+.picture-box img {
     width: 100%;
-    padding: 0px;
-}
-
-
-@media screen and (min-width: 768px) {
-    .layout .card-5 .card-img-5 img {
-        width: 400px;
-        height: 400px;
-        padding: 30px;
-        margin: 0;
-        margin-top: 50px;
-     }
- }
-
-.card-text-5 {
-    margin-bottom: 20px;
-    margin-top: 40px;
-    font-family: Roboto, Arial, Helvetica, sans-serif;
-    font-size: 16px;
-    line-height: 1.4;
+    height: 400px;
+    margin-top: 20px;
 }
 
 @media screen and (min-width: 768px) {
-    .card-text-5 {
-    font-family: Roboto, Arial, Helvetica, sans-serif;
-    font-size: 20px;
+    .picture-box {
+        flex-flow: row nowrap;
+        padding: 0px;
     }
 }
 
-
-.card-img-5 img {
-    width: 550px;
-    height: 400px;
-    padding: 10px;
+@media screen and (min-width: 768px) {
+    .picture-box img {
+        width: 430px;
+        height: 400px;
+    }
 }
 
 .image-card {
@@ -450,20 +411,5 @@ video {
 @media screen and (min-width: 768px) {
     .image-card img {
         height: 500px;
-    }
-}
-
-.single-img {
-    overflow-x: scroll;
-    margin: 30px;
-}
-
-.single-img img {
-    width: 100%;
-}
-
-@media screen and (min-width: 768px) {
-    .single-img img {
-        margin: 0;
     }
 }
