--- a/css/styles.css
+++ b/css/styles.css
@@ -38,6 +38,7 @@ h1 {
     text-align: center;
     padding: 50px;
     font-size: 54.93px;
+    line-height: 82px;
 }
 
 h2 {
@@ -45,6 +46,7 @@ h2 {
     font-weight: 500;
     text-align: center;
     font-size: 43.95px;
+    line-height: 65px;
 }
 
 h3 {
@@ -53,14 +55,16 @@ h3 {
    text-align: center;
    padding: 20px;
    font-size: 20px;
+   line-height: 30px;
 }
 
  h4 {
     font-family: Raleway, Arial, Helvetica, sans-serif;
     font-weight: 500;
     font-size: 20px;
-    margin-top: 20px;
+    margin-top: 10px;
     margin-bottom: 20px;
+    line-height: 30px;
 }
 
 h5 {
@@ -68,7 +72,8 @@ h5 {
     font-weight: 500;
     text-align: left;
     font-size: 35.16px;
-    padding-bottom: 20px;
+    padding-bottom: 40px;
+    line-height: 52px;
 }
 
 h6 {
@@ -76,6 +81,7 @@ h6 {
     font-weight: 500;
     text-align: left;
     font-size: 35.16px;
+    line-height: 52px;
 }
 
 a {
@@ -96,16 +102,6 @@ a:hover h4 {
    border-bottom: 2px solid #000;
 
 }
-
-a h6 {
-    color: #000;
-}
-
-a:hover h6 {
-    color: #000;
-    border-bottom: 2px solid #000;
-}
-
 
 .header {
     height: 480px;
@@ -231,7 +227,7 @@ video {
 @media screen and (min-width: 840px) {
     .card .card-text {
     padding:0;
-    margin-top: 60px;
+    margin-top: 50px;
     margin-left: 60px;
     margin-right: 60px;
     }
@@ -239,6 +235,14 @@ video {
 
 .card-text-small {
     display: flex;
+    justify-content: left;
+    padding-bottom: 30px;
+}
+
+.card-text-small-2 {
+    display: flex;
+    justify-content: left;
+
 }
 
 .card-2 {
